WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126993
AX: WebKit is not firing AXMenuOpenedNotification
https://bugs.webkit.org/show_bug.cgi?id=126993
Summary
AX: WebKit is not firing AXMenuOpenedNotification
chris fleizach
Reported
2014-01-14 10:37:52 PST
WebKit is not firing menu open notification AXMenuOpenedNotification
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA-UAIG/1.0/tests/test-files/test93.html
Attachments
patch
(11.75 KB, patch)
2014-01-14 10:42 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(12.10 KB, patch)
2014-01-15 10:36 PST
,
chris fleizach
mario
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2014-01-14 10:39:14 PST
<
rdar://problem/15284928
>
chris fleizach
Comment 2
2014-01-14 10:42:06 PST
Created
attachment 221180
[details]
patch
Mario Sanchez Prada
Comment 3
2014-01-15 02:59:50 PST
Comment on
attachment 221180
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=221180&action=review
> Source/WebCore/ChangeLog:29 > + (WebCore::RenderElement::insertChildInternal): > + (WebCore::RenderElement::styleWillChange):
Would it make sense to pass the new child being added in RenderMenuList::addChild too? (probably not)
> Source/WebCore/accessibility/AXObjectCache.cpp:632 > +void AXObjectCache::childrenChanged(Node* node, Node* newChild) > +{ > + if (newChild) > + checkForOpenMenu(newChild); > childrenChanged(get(node)); > }
I can't see in this patch any usage of this function (using Node pointers as parameters) passing the new parameter 'newChild'. Maybe it's not needed to add it then? Or perhaps there's a missing bit in the attached patch?
> Source/WebCore/accessibility/AXObjectCache.cpp:688 > +
Extra blank lines
> Source/WebCore/accessibility/AXObjectCache.h:108 > + void childrenChanged(Node*, Node* newChild = 0); > + void childrenChanged(RenderObject*, RenderObject* newChild = 0);
There was a recent discussion in webkit-dev and I think the agreement was to use nullptr in this cases instead of 0 or NULL (with the exception of Objective-C files)
chris fleizach
Comment 4
2014-01-15 10:36:41 PST
Created
attachment 221284
[details]
patch
chris fleizach
Comment 5
2014-01-16 09:29:45 PST
http://trac.webkit.org/changeset/162132
Alexey Proskuryakov
Comment 6
2014-01-16 14:04:41 PST
platform/mac/accessibility/aria-multiline.html has started to sometimes hit assertions today, possibly because of this change. Filed
bug 127141
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug